[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="VBoxContainer"]
offset_right = 63.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../Exit")
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 63.0
offset_bottom = 44.0
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
offset_top = 48.0
offset_right = 63.0
offset_bottom = 68.0
focus_neighbor_bottom = NodePath("../Start")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
